// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inject imports 1`] = `
"import test from "test";
import { ref } from "vue";
function myComponent() {
    const count = ref(0);
}
"
`;

exports[`transform function block 1`] = `
"const add = ()=>{
    return a + b;
};
"
`;

exports[`transform function block 2`] = `
"function add(a, b) {
    return a + b;
}
"
`;
